<resources>
    <string name="app_name">Hikai Offline</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_classroom">Classroom</string>
    <string name="menu_contact">Contact</string>
    <string name="menu_about">About</string>
    <string name="menu_web">Go to Website</string>
    <string name="menu_sync">Sync Class</string>
    <string name="menu_setting">Setting</string>

    <!-- For contact page-->
    <string name="rkm">Ramakrishna Mission, Sohra</string>
    <string name="rkmaddress">Sohra, Pincode: 793108 \nMeghalaya India</string>
    <!-- About -->
    <string name="hikai"><font color="#263238">Hybrid Interactive Knowledge Assimilation Initiative</font></string>
    <string name="about"><font color="#263238">The Hybrid Interactive Knowledge Assimilation Initiative</font><font color="#FF5733">(HIKAI)</font> being launched by Ramakrishna Mission to provide structured curriculum as per the Board syllabus to all school-going students in Meghalaya. You are aware that the schools are not allowed to function in normal mode by the Government fearing community spread of COVID19.</string>
    <string name="about2">So, the two centres of the Ramakrishna Mission in Meghalaya viz, the Sohra (Cherrapunjee) centre and the Shillong centre are combining their expertise to provide education through an innovative the Hybrid Interactive Knowledge Assimilation Initiative (HIKAI) from 17 August 2020 for any student in Meghalaya, who wants to use this facility. To begin with we are launching the program for classes IX to XII.</string>
    <!-- Developers And versions -->
    <string name="version">Version (Alpha)</string>
    <string name="developed"></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>