<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_classroom"
            android:icon="@drawable/classroom"
            android:title="@string/menu_classroom" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/help"
            android:title="@string/menu_contact" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/about"
            android:title="@string/menu_about" />
    </group>
    <group android:checkableBehavior="single"
        android:id="@+id/web">
        <item
            android:id="@+id/nav_web"
            android:icon="@drawable/web"
            android:title="@string/menu_web" />
    </group>
    <group android:checkableBehavior="single"
        android:id="@+id/Sync">
        <item
            android:id="@+id/nav_sync"
            android:icon="@android:drawable/ic_popup_sync"
            android:title="@string/menu_sync" />
    </group>
    <group android:checkableBehavior="single"
        android:id="@+id/Setting">
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_settings_24"
            android:title="@string/menu_setting" />
    </group>
</menu>