<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_classroom">

    <fragment
        android:id="@+id/nav_classroom"
        android:name="com.example.hikaioffline.ui.classroom.ClassroomFragment"
        android:label="@string/menu_classroom"
        tools:layout="@layout/fragment_classroom" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.example.hikaioffline.ui.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/nav_contact"
        android:name="com.example.hikaioffline.ui.contact.ContactFragment"
        android:label="@string/menu_contact"
        tools:layout="@layout/fragment_contact" />
    <fragment
        android:id="@+id/nav_web"
        android:name="com.example.hikaioffline.ui.web.WebFragment"
        android:label="@string/menu_web"
        tools:layout="@layout/fragment_web" />
    <fragment
        android:id="@+id/nav_setting"
        android:name="com.example.hikaioffline.ui.setting.SettingFragment"
        android:label="setting_fragment"
        tools:layout="@layout/fragment_setting" />


</navigation>